[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/player/statemachine/PlayerStateMachine.gd" type="Script" id=1]
[ext_resource path="res://entities/player/statemachine/state/IdleState.gd" type="Script" id=2]
[ext_resource path="res://entities/player/statemachine/state/MovementState.gd" type="Script" id=3]
[ext_resource path="res://entities/player/statemachine/state/MoveState.gd" type="Script" id=4]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 0, 1 )
emission_enabled = true
emission = Color( 0, 0.686275, 0.870588, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[node name="Player" type="KinematicBody"]

[node name="BodyCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0 )
shape = SubResource( 1 )

[node name="BodyMeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="OmniLight" type="OmniLight" parent="BodyMeshInstance"]
light_color = Color( 0, 0.686275, 0.870588, 1 )
light_energy = 2.0

[node name="PlayerStateMachine" type="Spatial" parent="."]
script = ExtResource( 1 )
initialStateNodePath = NodePath("../PlayerStateMachine/MovementState/IdleState")
idleState = NodePath("../PlayerStateMachine/MovementState/IdleState")
moveState = NodePath("../PlayerStateMachine/MovementState/MoveState")

[node name="MovementState" type="Spatial" parent="PlayerStateMachine"]
script = ExtResource( 3 )
kinematicBodyNodePath = NodePath("../..")

[node name="IdleState" type="Spatial" parent="PlayerStateMachine/MovementState"]
script = ExtResource( 2 )

[node name="MoveState" type="Spatial" parent="PlayerStateMachine/MovementState"]
script = ExtResource( 4 )
